# qnet

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README_OLD.md  SECURITY.md  catalog.json  droplet-keypair.pb  equipment-requirements.md  feasibility-analysis.md  info.md  rawlogs.txt  scaling-strategy.md  setup-windows-dev.ps1  test-status.ps1
.github/: copilot-instructions.md
.github/workflows/: catalog-publish.yml  ci.yml  nightly-perf.yml  qnet-lint.yml
apps/: README.md
apps/edge-gateway/: Cargo.toml
apps/edge-gateway/src/: main.rs
apps/stealth-browser/: Cargo.toml  README.md  build.rs  config.toml  tauri.conf.json
apps/stealth-browser/assets/: catalog-default.json  publisher.pub
apps/stealth-browser/src/: directory.rs  main.rs
apps/stealth-browser/src/exit/: config.rs  errors.rs  forwarder.rs  handler.rs  mod.rs  parser.rs  validator.rs
apps/stealth-browser/ui/: index.html
artifacts/: linux-hw-profile.txt  perf-summary.md  rr_compare_concurrent_quic_inflight16_n200.json  rr_compare_concurrent_tcp_inflight16_n200.json  windows-hw-profile.txt
artifacts/bootstrap/: run_1.txt  run_2.txt  run_3.txt  seeds_used.json
artifacts/criterion/aead_chacha20poly1305/open_1024b/base/: benchmark.json  estimates.json  sample.json
artifacts/criterion/aead_chacha20poly1305/open_1024b/change/: estimates.json
artifacts/criterion/htx_noise_xk_loopback/base/: sample.json  tukey.json
artifacts/criterion/htx_noise_xk_loopback/change/: estimates.json
artifacts/criterion/htx_noise_xk_loopback/new/: benchmark.json  estimates.json
artifacts/criterion/l2_framing/encode_1024b/new/: tukey.json  (+3 more)
artifacts/dpi/: chrome-baseline-20250912_142125.pcapng  chrome-baseline-20250912_142234.pcapng  chrome-baseline-20250912_142344.pcapng  chrome-baseline-20250912_142529.pcapng  qnet-stealth-20250912_162013.pcapng
crates/alias-ledger/: Cargo.toml  README.md
crates/alias-ledger/src/: lib.rs
crates/c-lib/: Cargo.toml  README.md  build-windows-msvc.ps1
crates/c-lib/examples/: echo.c
crates/c-lib/include/: qnet.h
crates/c-lib/src/: lib.rs
crates/catalog-signer/: Cargo.toml
crates/catalog-signer/src/: main.rs
crates/core-cbor/: Cargo.toml
crates/core-cbor/src/: lib.rs
crates/core-crypto/: Cargo.toml  README.md
crates/core-crypto/benches/: aead.rs
crates/core-crypto/src/: lib.rs
crates/core-framing/: Cargo.toml  README.md
crates/core-framing/benches/: framing.rs
crates/core-framing/src/: lib.rs
crates/core-governance/: Cargo.toml  README.md
crates/core-governance/src/: lib.rs
crates/core-identity/: Cargo.toml  README.md
crates/core-identity/src/: lib.rs
crates/core-mesh/: Cargo.toml  README.md
crates/core-mesh/benches/: README.md  echo.rs
crates/core-mesh/examples/: mesh_discovery.rs  rr_compare.rs
crates/core-mesh/src/: circuit.rs  discovery.rs  lib.rs  mesh_network.rs  nat.rs  relay.rs  stream_protocol.rs
crates/core-mix/: Cargo.toml  README.md
crates/core-mix/src/: lib.rs
crates/core-routing/: Cargo.toml  README.md
crates/core-routing/src/: lib.rs
crates/htx/: Cargo.toml  README.md
crates/htx/benches/: handshake.rs  mixed_concurrency.rs  stream.rs
crates/htx/examples/: bootstrap_check.rs  dial_tls_demo.rs  tls_mirror_demo.rs
crates/htx/src/: api.rs  bootstrap.rs  decoy.rs  inner.rs  lib.rs  mux.rs  tl.rs  tls_mirror.rs  transition.rs
crates/mixnode/: Cargo.toml  README.md
crates/mixnode/src/: lib.rs
crates/voucher/: Cargo.toml  README.md
crates/voucher/src/: lib.rs
docs/: ARCHITECTURE.md  CATALOG.md  CONTRIBUTING.md  DEMO_SECURE_CONNECTION.md  EXIT_NODE.md  QUICKSTART.md  TROUBLESHOOTING.md  exit_node_deployment.md
docs/archive/: MIGRATION_CATALOG_REMOVAL.md
examples/echo/: Cargo.toml
examples/echo/src/: main.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: framing_decode.rs  noise_handshake.rs
linter/: README.md  go.mod  test.sh
linter/cmd/qnet-lint/: main.go
linter/pkg/validator/: validator.go
logs/: stealth-browser.log.2025-09-10  stealth-browser.log.2025-09-11  stealth-browser.log.2025-09-12  stealth-browser.log.2025-09-13  stealth-browser.log.2025-09-14
qnet-spec/: README.md
qnet-spec/docs/: ARCHITECTURE.md  CONTRIBUTING.md  catalog-publisher.md  catalog-schema.md  catalog-signer.md  droplet-testing.md  extension.md  helper.md  home-testing.md  manual-testing.md  physical-testing.md
qnet-spec/docs/apps/: README.md  stealth-browser.md
qnet-spec/docs/crates/: alias-ledger.md  c-lib.md  core-crypto.md  core-framing.md  core-governance.md  core-identity.md  core-mesh.md  core-mix.md  core-routing.md  htx.md  mixnode.md  voucher.md
qnet-spec/memory/: ai-guardrail.md  constitution.md  testing-rules.md
qnet-spec/specs/001-qnet/: T6.6-acceptance-checklist.md  T6.6-playbook.md  T6.7-playbook.md  currently-required-edits1.md  currently-required-edits2.md  plan.md  research-requirements.md  spec.md  tasks.md
qnet-spec/templates/: DPI-README.md  agent-file-template.md  bootstrap-acceptance.sh  bootstrap-seeds.example.json  catalog-publish-workflow.yml  catalog.example.json  catalog.example.json.sig  catalog.meta.yml  criterion-bench-skeleton.rs  decoy-catalog.example.json  decoy-catalog.json  decoys.yml  dpi-capture.ps1  dpi-capture.sh  dpi-compare.py  edge-gateway.example.env  perf-compare.sh  perf-run-linux.sh  perf-run-windows.ps1  perf-summary-template.md  perf-workflow-template.yml  plan-template.md  spec-template.md  tasks-template.md  windows-perf-baseline.ps1
qnet-spec/templates/archive/: decoys.yml
qnet-spec/templates/keys/: publisher.pub
scripts/: check_md_links.ps1  demo-secure-connection.ps1  deploy-droplet.ps1  deploy-super-peer.sh  edge-gateway-setup-b.ps1  http-health-server.ps1  run-fuzz-wsl.sh  run-masked-dev.ps1  stealth-client-setup-a.ps1  test-decoy-rotation.ps1  test-masked-connect.ps1
tests/compliance/: Cargo.toml
tests/compliance/src/: lib.rs
tests/compliance/tests/: minimal.rs  standard.rs
tests/integration/: Cargo.toml  mesh_circuit.rs  mesh_relay.rs
tests/integration/tests/: mesh_discovery.rs
utls-gen/: README.md  go.mod  go.sum  main.go
(+229 files in other folders)
