[workspace]
members = [
    "crates/core-crypto",
    "crates/core-cbor",
    "crates/core-framing",
    "crates/htx",
    "crates/core-routing",
    "crates/core-mesh",
    "crates/core-mix",
    "crates/mixnode",
    "crates/core-identity",
    "crates/alias-ledger",
    "crates/voucher",
    "crates/core-governance",
    "examples/echo",
]
resolver = "2"

[workspace.package]
edition = "2021"
