[package]
name = "catalog-signer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
hex = "0.4"
chrono = { version = "0.4", features = ["serde", "clock"] }
ring = "0.17"

core-cbor = { path = "../core-cbor" }
core-crypto = { path = "../core-crypto" }
