[package]
name = "core-framing"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
core-crypto = { path = "../core-crypto" }

[dev-dependencies]
rand = "0.8"
criterion = { version = "0.5", default-features = false }

[features]
default = []
perf-bench = []

[[bench]]
name = "framing"
harness = false
required-features = ["perf-bench"]
