[package]
name = "core-framing"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
core-crypto = { path = "../core-crypto" }
rand = { version = "0.8", features = ["std"] }

[dev-dependencies]
rand = "0.8"
criterion = { version = "0.5", default-features = false }

[features]
default = []
perf-bench = []
stealth-mode = []

[[bench]]
name = "framing"
harness = false
required-features = ["perf-bench"]
