[package]
name = "core-mesh"
version = "0.1.0"
edition = "2021"

[features]
with-libp2p = ["dep:libp2p", "dep:libp2p-mdns"]
quic = ["with-libp2p", "libp2p/quic"]

[dependencies]
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-std = { version = "1", features = ["attributes"] }
sha2 = "0.10"
base32 = "0.4"
log = "0.4"
hex = "0.4"
rand = "0.8"

# Internal dependencies for catalog loading
core-cbor = { path = "../core-cbor" }
core-crypto = { path = "../core-crypto" }

[dependencies.libp2p-mdns]
version = "0.45"
optional = true
features = ["async-io"]

[dependencies.libp2p]
version = "0.53"
optional = true
default-features = false
features = [
    "tcp", "dns", "yamux", "noise", "identify", "ping", "mdns", "gossipsub", "macros", "request-response", "async-std", "kad", "relay", "autonat"
]

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["async_std"] }
async-std = { version = "1", features = ["attributes"] }
rand = "0.8"

[[bench]]
name = "echo"
harness = false
