[package]
name = "htx"
version = "0.1.0"
edition = "2021"

[dependencies]
core-crypto = { path = "../core-crypto" }
core-cbor = { path = "../core-cbor" }
core-framing = { path = "../core-framing" }
ring = "0.17"
curve25519-dalek = "4"
rand = { version = "0.8", features = ["std"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
md5 = "0.7"
serde_bytes = "0.11"
once_cell = "1"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
rustls = "0.21"
rustls-native-certs = "0.6"
rustls-pemfile = "1"
thiserror = "1"
serde_cbor = { version = "0.11", features = ["std"] }
hex = "0.4"

[features]
rustls-config = []
perf-bench = []
stealth-mode = ["core-framing/stealth-mode"]
tracing = []

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "handshake"
harness = false
required-features = ["perf-bench"]

[[bench]]
name = "stream"
harness = false
required-features = ["perf-bench"]

[[bench]]
name = "mixed_concurrency"
harness = false
required-features = ["perf-bench"]
