[package]
name = "compliance"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
rand = "0.8"

core-crypto = { path = "../../crates/core-crypto" }
core-framing = { path = "../../crates/core-framing" }
htx = { path = "../../crates/htx" }
core-routing = { path = "../../crates/core-routing" }
core-mix = { path = "../../crates/core-mix" }

[features]
# Profiles
default = ["minimal"]
minimal = []
standard = []

[lib]
name = "compliance"
path = "src/lib.rs"

[[test]]
name = "minimal_suite"
path = "tests/minimal.rs"
required-features = ["minimal"]

[[test]]
name = "standard_suite"
path = "tests/standard.rs"
required-features = ["standard"]
